salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/Contact_Product_Affinity__c.object-meta.xml
<CustomObject>
    <description>Tracks product browsing history and purchase affinity for contacts. Used to generate personalized recommendations for journey content.</description>
    <label>Contact Product Affinity</label>
    <nameField>
        <displayFormat>CPA-{0000}</displayFormat>
        <label>Affinity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Product Affinities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>