salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/fields/Affinity_Score__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Score__c</fullName>
    <description>Higher score = stronger affinity. Viewed=1, Cart=3, Wishlist=2, Purchased=5</description>
    <defaultValue>1</defaultValue>
    <label>Affinity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>