salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/fields/Affinity_Type__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Type__c</fullName>
    <label>Affinity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Viewed</fullName>
                <default>true</default>
                <label>Viewed</label>
            </value>
            <value>
                <fullName>Added to Cart</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Wishlist</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>