salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/fields/Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction__c</fullName>
    <label>Last Interaction</label>
    <type>DateTime</type>
</CustomField>