salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>App product slug (e.g., moisturizer-sensitive)</description>
    <label>Product Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>