salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <description>Full URL to the product image for Firefly reference</description>
    <label>Product Image URL</label>
    <type>Url</type>
</CustomField>