salesforce/force-app/main/default/objects/Contact_Product_Affinity__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>